# rpak

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: header.rs  lib.rs
tests/: tests.rs
tests/test_data/: test_single.pak
